--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -20,7 +20,7 @@
                         Cette API permet de gérer les catways, les réservations
                         et les utilisateurs.
                     </p>
-                    <a class="underline text-blue-500" href="#"
+                    <a class="underline text-blue-500" href="/doc"
                         >Documentation de l'API</a
                     >
                 </section>
