--- a/src/views/users.ejs
+++ b/src/views/users.ejs
@@ -42,7 +42,7 @@
                         <li class="p-2">
                             <a
                                 class="hover:text-blue-500 hover:underline"
-                                href="#"
+                                href="/doc"
                                 >Documentation de l'API</a
                             >
                         </li>
